--- a/src/components/cocktaildetail.css
+++ b/src/components/cocktaildetail.css
@@ -3,6 +3,7 @@
     text-align: center;
     font-size: 1.5em;
     font-family: 'Times New Roman', Times, serif;
+    padding: 1em;
 }
 
 #cocktail-detail img {
