CocktailList.jsx angelegt implementiert

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,3 @@
-@import url("components/cocktaildetail.css")
+@import url("components/cocktaildetail.css");
+@import url("components/cocktailsearch.css");
 
