--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,46 @@
 body {
-    color: #fff;
-    background-color: #262B46;
+  color: #fff;
 }
-button {
-    background-color: #6FC3DF;
+.HeaderContainer {
+  padding: 0 5%;
+}
+ul {
+  text-transform: uppercase;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding-inline-start: 0;
+  padding: 2vh 2%;
+  margin: 0;
+  font-size: 0.81rem;
+}
+ul li:nth-of-type(1) {
+  font-weight: bold;
+  letter-spacing: 3px;
+  font-family: Playfair Display;
+}
+ul li:nth-of-type(2) {
+  font-family: 'Montserrat', sans-serif;
+}
+h1 {
+  font-weight: bold;
+  font-size: 3rem;
+  margin: 14vh 0 0 0;
+}
+p {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  margin: 1vh 0 3vh 0;
+}
+input {
+  border-radius: 6px;
+  height: 2rem;
+  box-sizing: border-box;
+  margin: 5vh 2% 3vh 0;
+}
+img {
+  display: block;
+  margin: 0 auto;
+  padding: 10vh 0 3vh 0;
 }
