--- a/src/components/cocktaildetail.css
+++ b/src/components/cocktaildetail.css
@@ -1,9 +1,20 @@
 .details {
     display: flex;
+    flex-wrap: wrap;
+    margin: 5vh auto 0 !important;
+    max-width: 90vw;
 }
 
-.leftimage {
-    position: relative;
+.detail_ingredient_item {
+    display: block;
+}
+
+.detail_image {
+    height: 50vh;
+}
+
+.right_article {
+    max-width: 50%;
 }
 
 #cocktail-detail {
@@ -18,5 +29,4 @@
     width: 25%;
     height: 25%;
     box-shadow: 10px 5px 5px black;
-
 }
