--- a/src/components/Drink.css
+++ b/src/components/Drink.css
@@ -9,17 +9,17 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   text-align: center;
-  padding: vh 0 4vh 0%;
+  padding: 5vh 0 2vh 10%;
 }
 .drink-image {
   width: 100%;
   display: block;
-  margin-right: 15%;
+  margin-right: 10%;
 }
 .drink-name {
   font-family: Montserrat;
-  font-weight: 300;
+  font-weight: 400;
   /* max-width: 50%; */
   transform: rotate(-90deg);
-  margin-left: 55%;
+  margin-left: 20%;
 }
