--- a/src/components/CategoryResults.css
+++ b/src/components/CategoryResults.css
@@ -3,3 +3,22 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
+
+.style1 {
+    background-color: #6FC3DF;
+}
+.style2 {
+    background-color: #8D82C4;
+}
+.style3 {
+    background-color: #EC8D81;
+}
+.style4 {
+    background-color: #E7B788;
+}
+.style5 {
+    background-color: #8EA9E8;
+}
+.style6 {
+    background-color: #87C5A4;
+}
