--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -40,3 +40,9 @@
   margin: 0 auto;
   padding: 10vh 0 3vh 0;
 }
+@media only screen and (max-width: 576px) {
+  .start {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
