--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -27,3 +27,9 @@
 .Random {
   background-color: #87c5a4;
 }
+@media only screen and (max-width: 576px) {
+  .start {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
