--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   padding-inline-start: 0;
-  padding: 2vh 2%;
+  padding: 2vh 0;
   margin: 0;
   font-size: 0.81rem;
 }
