--- a/src/components/CategoryResults.css
+++ b/src/components/CategoryResults.css
@@ -1,5 +1,5 @@
 .category-results-container {
-  padding-top: 100px;
+  /* padding-top: 100px; */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
