--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -42,11 +42,22 @@
   margin: 0 auto;
   padding: 10vh 0 3vh 0;
 }
-
+.arrow:hover {
+  transition: transform 3s ease-in-out;
+  transform: rotateY(-360deg);
+}
 .search-button {
   border-radius: 6px;
-  background-color: #6FC3DF;
+  background-color: #6fc3df;
   color: #000;
   padding: 10px;
   vertical-align: middle;
+}
+@media only screen and (max-width: 576px) {
+  .HeaderContainer {
+    height: 65vh;
+  }
+  .arrow {
+    padding: 0 0 5vh 0;
+  }
 }
