--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -53,6 +53,11 @@
   padding: 10px;
   vertical-align: middle;
 }
+.search-button:hover {
+  background-color: goldenrod;
+  color: #fff;
+  transition: all 2s ease;
+}
 @media only screen and (max-width: 576px) {
   .HeaderContainer {
     height: 65vh;
