--- a/src/components/Drink.css
+++ b/src/components/Drink.css
@@ -33,8 +33,13 @@
 }
 .left,
 .right {
-  /* display: flex; */
   position: relative;
+  transition: 0.1s;
+}
+.left:hover,
+.right:hover {
+  transform: scale(1.1);
+  z-index: 99;
 }
 .left img {
   grid-column: 1 / 2;
@@ -50,10 +55,4 @@
   position: absolute;
   top: 40%;
   right: 70%;
-}
-
-.drink-container:hover {
-  cursor: pointer;
-  transition: transform 300ms ease;
-  transform: scale(1.1);
 }
