--- a/src/components/CategoryResults.css
+++ b/src/components/CategoryResults.css
@@ -1,6 +1,10 @@
 .category-results-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  /* width: 100%;
+  height: 60%;
+  padding-left: 0;
+  overflow-y: scroll; */
 }
 
 @media only screen and (max-width: 576px) {
