--- a/src/components/cocktaildetail.css
+++ b/src/components/cocktaildetail.css
@@ -1,22 +1,19 @@
-.details {
-  display: flex;
-  justify-content: center;
-  margin: 4vh auto 0 !important;
-  max-width: 90vw;
-}
-
-.detail_ingredient_item {
-  display: block;
-}
-
 .detail_title {
   text-align: center;
   font-size: 2em;
 }
 
-/* .detail_image {
-  max-width: 450px;
-} */
+.details {
+  display: flex;
+  justify-content: center;
+  margin: 4vh auto 0 !important;
+  max-width: 90vw;
+  line-height: 1.5em;
+}
+
+.detail_ingredient_item {
+  display: block;
+}
 
 .right_article {
   max-width: 450px;
