--- a/src/components/cocktaildetail.css
+++ b/src/components/cocktaildetail.css
@@ -8,7 +8,7 @@
   justify-content: center;
   margin: 4vh auto 0 !important;
   max-width: 90vw;
-  line-height: 1.5em;
+  line-height: 1.5rem;
 }
 
 .detail_ingredient_item {
