--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,36 @@ a {
   scroll-behavior: smooth;
 }
 
+
+.detail_title {
+  text-align: center;
+  font-size: 2em;
+}
+
+.details {
+  display: flex;
+  justify-content: center;
+  margin: 4vh auto 0 !important;
+  max-width: 90vw;
+  line-height: 1.5rem;
+}
+
+.detail_ingredient_item {
+  display: block;
+}
+
+.right_article {
+  max-width: 450px;
+  padding-left: 20px;
+}
+
+@media only screen and (max-width: 800px) {
+  .details {
+    flex-wrap: wrap;
+  }
+
+  .right_article {
+    max-width: 450px;
+    padding-left: 0;
+  }
+}
